--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cz.harvie.northdog"
-    android:versionCode="2"
-    android:versionName="1.1" >
+    android:versionName="0.1b"
+    android:versionCode="0"
+    >
 
     <uses-sdk android:minSdkVersion="7" />
 
